# footpal-native-server

./: .gitignore  CMakeLists.txt  README.md  build-config.cmake  definitions.cmake  dependencies.cmake  product-info.cmake  resources.cmake
CMakeModules/: FindCQL.cmake  FindGeoIP.cmake  FindVMime.cmake  FindWt.cmake
CoreLib/: CMakeLists.txt  crypto.cpp  crypto.hpp  exception.hpp  httpstatus.cpp  httpstatus.hpp  log.cpp  log.hpp  mail.cpp  mail.hpp  main.cpp  make_unique.hpp  system.cpp  system.hpp
RESTful/: CMakeLists.txt  apiresource.cpp  apiresource.hpp  cgiroot.cpp  main.cpp  publicapiresource.cpp  publicapiresource.hpp  rt.cpp  rt.hpp  servicecontract.cpp  servicecontract.hpp
RESTful/resources/: app.rc
_docs/: cassandra-cpp-driver.txt  tips.txt
_srv-tools/: geoupdater.cpp
