IF ( BUILD_RESTFUL_PROJECT )
    FILE ( GLOB RESTFUL_PROJECT_SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp )

    SET ( RESTFUL_PROJECT_BIN_FILE "${RESTFUL_PROJECT_BIN_NAME}" )

    IF ( NOT WIN32 AND NOT MINGW )
        ADD_EXECUTABLE ( ${RESTFUL_PROJECT_BIN_FILE} ${RESTFUL_PROJECT_SOURCE_FILES} )    
    ELSE (  )
        CONFIGURE_FILE ( "${RESTFUL_PROJECT_APP_ICON_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${RESTFUL_PROJECT_APP_ICON_FILE}"
            COPYONLY )
        CONFIGURE_FILE ( "${RESTFUL_PROJECT_RC_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${RESTFUL_PROJECT_RC_FILE}"
            @ONLY NEWLINE_STYLE CRLF )
        SET ( CMAKE_RC_COMPILER_INIT windres )
        ENABLE_LANGUAGE( RC )
        SET ( CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> <FLAGS> -O coff <DEFINES> -i <SOURCE> -o <OBJECT>")
        ADD_EXECUTABLE ( ${RESTFUL_PROJECT_BIN_FILE} ${RESTFUL_PROJECT_SOURCE_FILES} "${CMAKE_CURRENT_BINARY_DIR}/${RESTFUL_PROJECT_RC_FILE}" )
    ENDIF (  )

    FOREACH ( FLAG ${CXX11_FEATURE_LIST} )
        SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE}
            APPEND PROPERTY COMPILE_DEFINITIONS ${FLAG} )
    ENDFOREACH ( FLAG ${CXX11_FEATURE_LIST} )

    TARGET_LINK_LIBRARIES ( ${RESTFUL_PROJECT_BIN_FILE}
        ${CORELIB_BIN_NAME}
        ${Boost_LIBRARIES}
        ${WT_LIBRARY} ${WT_FCGI_LIBRARY}
    )

    IF ( DEFINED RESTFUL_PROJECT_DEFINES )
        SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "${RESTFUL_PROJECT_DEFINES}" )
    ENDIF (  )

    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_COMPILER=\"${FOOTPAL_BUILD_COMPILER}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_HOST=\"${FOOTPAL_BUILD_HOST}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_PROCESSOR=\"${FOOTPAL_BUILD_PROCESSOR}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_SYSTEM=\"${FOOTPAL_BUILD_SYSTEM}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COMPANY_NAME=\"${FOOTPAL_PRODUCT_COMPANY_NAME}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COPYRIGHT_HOLDER=\"${FOOTPAL_PRODUCT_COPYRIGHT_HOLDER}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COPYRIGHT_YEAR=\"${FOOTPAL_PRODUCT_COPYRIGHT_YEAR}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COPYRIGHT=\"${FOOTPAL_PRODUCT_COPYRIGHT}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_PRODUCT_INTERNAL_NAME=\"${FOOTPAL_RESTFUL_PROJECT_PRODUCT_INTERNAL_NAME}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_PRODUCT_NAME=\"${FOOTPAL_RESTFUL_PROJECT_PRODUCT_NAME}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION_MAJOR=${FOOTPAL_RESTFUL_PROJECT_PRODUCT_VERSION_MAJOR}" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION_MINOR=${FOOTPAL_RESTFUL_PROJECT_PRODUCT_VERSION_MINOR}" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION_PATCH=${FOOTPAL_RESTFUL_PROJECT_PRODUCT_VERSION_PATCH}" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION_REVISION=\"${FOOTPAL_RESTFUL_PROJECT_PRODUCT_VERSION_REVISION}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_VERSION=\"${FOOTPAL_RESTFUL_PROJECT_PRODUCT_VERSION}\"" )
    SET_PROPERTY ( TARGET ${RESTFUL_PROJECT_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_DESCRIPTION=\"${FOOTPAL_RESTFUL_PROJECT_PRODUCT_DESCRIPTION}\"" )

    GET_PROPERTY( RESTFUL_PROJECT_EXECUTABLE TARGET ${RESTFUL_PROJECT_BIN_FILE} PROPERTY LOCATION )

    IF ( CXX_GCC AND GCC_STRIP_EXECUTABLES )
        ADD_CUSTOM_COMMAND ( TARGET ${RESTFUL_PROJECT_BIN_FILE}
            POST_BUILD
            COMMAND strip ${RESTFUL_PROJECT_EXECUTABLE}
            COMMAND strip -R.comment ${RESTFUL_PROJECT_EXECUTABLE}
            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )
    ENDIF (  )

    IF ( WIN32 AND MINGW )
        IF ( CORELIB_LINK_TYPE STREQUAL "SHARED" )
            GET_PROPERTY( CORELIB_LIBRARY_PATH TARGET ${CORELIB_BIN_NAME} PROPERTY LOCATION )

            ADD_CUSTOM_COMMAND ( TARGET ${RESTFUL_PROJECT_BIN_FILE}
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${CORELIB_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${BOOST_CHRONO_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${BOOST_DATE_TIME_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${BOOST_FILESYSTEM_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${BOOST_REGEXLIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${BOOST_SYSTEM_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${BOOST_THREAD_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${CRYPTOPP_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${GEOIP_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${LIBB64_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${VMIME_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${WT_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${WT_FCGI_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${CMAKE_CURRENT_SOURCE_DIR}/resources/favicon.ico" "${CMAKE_CURRENT_BINARY_DIR}"
            )
        ENDIF (  )
    ELSE (  )
        IF ( DEFINED RESTFUL_PROJECT_INSTALL_PREFIX )
            EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E make_directory "${RESTFUL_PROJECT_INSTALL_PREFIX}/etc" )
            EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E make_directory "${RESTFUL_PROJECT_INSTALL_PREFIX}/log" )
            EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E make_directory "${RESTFUL_PROJECT_INSTALL_PREFIX}/tmp" )
            EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E make_directory "${RESTFUL_PROJECT_INSTALL_PREFIX}/www" )

            INSTALL ( FILES
                "${CMAKE_CURRENT_SOURCE_DIR}/resources/wt_config.xml"
                DESTINATION "${RESTFUL_PROJECT_INSTALL_PREFIX}/etc"
                PERMISSIONS
                OWNER_READ
                GROUP_READ
                WORLD_READ
            )

            INSTALL ( FILES
                "${CMAKE_CURRENT_SOURCE_DIR}/resources/favicon.ico"
                DESTINATION "${RESTFUL_PROJECT_INSTALL_PREFIX}/www"
                PERMISSIONS
                OWNER_READ
                GROUP_READ
                WORLD_READ
            )

            INSTALL ( FILES
                "${CMAKE_CURRENT_BINARY_DIR}/${RESTFUL_PROJECT_BIN_FILE}"
                DESTINATION "${RESTFUL_PROJECT_INSTALL_PREFIX}/www"
                PERMISSIONS
                OWNER_READ OWNER_EXECUTE
                GROUP_READ GROUP_EXECUTE
                WORLD_READ WORLD_EXECUTE
            )
        ENDIF (  )
    ENDIF (  )
ENDIF (  )


